--- a/vue_practice/package.json
+++ b/vue_practice/package.json
@@ -24,6 +24,7 @@
     "axios": "^0.26.1",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "vue-coverflow": "^2.2.0",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
